fix from ubuntu

--- a/settings.json
+++ b/settings.json
@@ -1,14 +1,28 @@
 {
-    "window.zoomLevel": 2,
     "editor.renderControlCharacters": true,
     "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
     "http.proxyStrictSSL": false,
     "workbench.colorCustomizations": {
         "editorIndentGuide.background": "#0000ff"
     },
-    "workbench.colorTheme": "Atom One Dark",
-    "workbench.iconTheme": "vscode-icons",
+    "workbench.colorTheme": "Monokai Dimmed",
     "editor.tabCompletion": true,
     "files.autoSave": "afterDelay",
-    "go.autocompleteUnimportedPackages": true
+    "go.autocompleteUnimportedPackages": true,
+    "window.zoomLevel": 1,
+    "git.enableSmartCommit": true,
+    "go.formatTool": "gofmt",
+    "go.editorContextMenuCommands": {
+        "toggleTestFile": true,
+        "addTags": true,
+        "removeTags": false,
+        "testAtCursor": true,
+        "testFile": false,
+        "testPackage": true,
+        "generateTestForFunction": true,
+        "generateTestForFile": false,
+        "generateTestForPackage": false,
+        "addImport": true,
+        "testCoverage": true
+    }
 }
