--- a/settings.json
+++ b/settings.json
@@ -1,16 +1,34 @@
 {
-    "editor.renderControlCharacters": true,
-    "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
+    "terminal.integrated.shell.windows": "C:\\WINDOWS\\Sysnative\\cmd.exe",
     "http.proxyStrictSSL": false,
     "workbench.colorCustomizations": {
         "editorIndentGuide.background": "#0000ff"
     },
-    "workbench.colorTheme": "Monokai Dimmed",
-    "editor.tabCompletion": true,
-    "files.autoSave": "afterDelay",
-    "go.autocompleteUnimportedPackages": true,
-    "window.zoomLevel": 1,
+    "extensions.ignoreRecommendations": false,
+    "window.zoomLevel": 2,
+    
     "git.enableSmartCommit": true,
+    
+    "explorer.confirmDragAndDrop": false,
+    "explorer.confirmDelete": false,
+    "files.autoSave": "onFocusChange",
+    
+    "editor.tabCompletion": "onlySnippets",
+    "editor.renderControlCharacters": true,
+    "editor.formatOnPaste": true,
+    "editor.autoIndent": true,
+    "editor.acceptSuggestionOnEnter": "off",
+    "editor.wordWrap": "bounded",
+    "editor.wordWrapColumn": 80,
+    "editor.wrappingIndent": "same",
+    "workbench.editor.enablePreview": true,
+    "workbench.editor.enablePreviewFromQuickOpen": true,
+    
+    "markdown.preview.markEditorSelection": false,
+    "markdown.enableExperimentalExtensionApi": true,
+    "markdown.preview.breaks": true,
+    
+    "go.autocompleteUnimportedPackages": true,
     "go.formatTool": "gofmt",
     "go.editorContextMenuCommands": {
         "toggleTestFile": true,
@@ -24,5 +42,70 @@
         "generateTestForPackage": false,
         "addImport": true,
         "testCoverage": true
-    }
+    },
+
+    "python.linting.mypyArgs": [
+        "--ignore-missing-imports",
+        "--follow-imports=silent"
+    ],
+    "python.linting.mypyEnabled": true,
+    "[cmake]": {
+        
+    },
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/.vscode": true,
+        "**/.vs": true,
+        "**/__pycache__": true,
+        "**/.code":true,
+        "**/..ipynb_checkpoints":true,
+
+
+    },
+    "[markdown]": {
+        "editor.wordWrap": "bounded",
+        "editor.wordWrapColumn": 80,
+        "editor.quickSuggestions": true
+    },
+    "window.menuBarVisibility": "default",
+    "workbench.activityBar.visible": true,
+    "files.eol": "\n",
+    "terminal.external.windowsExec": "C:\\WINDOWS\\system32\\cmd.exe",
+    "javascript.updateImportsOnFileMove.enabled": "always",
+    "terminal.integrated.rendererType": "dom",
+    "search.quickOpen.includeSymbols": true,
+    "workbench.quickOpen.preserveInput": true,
+    "editor.largeFileOptimizations": false,
+    "vsicons.dontShowNewVersionMessage": true,
+    "workbench.colorTheme": "Default High Contrast",
+    "editor.suggestSelection": "first",
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "git.postCommitCommand": "push",
+    "git.detectSubmodules": false,
+    "git.confirmEmptyCommits": false,
+    "git.openDiffOnClick": false,
+    "git.showInlineOpenFileAction": false,
+    "git.path":"C:\\Program Files\\Git\\cmd\\git.exe",
+    "editor.tabSize": 2,
+    "python.jediEnabled": false,
+    "markdown.extension.toc.githubCompatibility": true,
+    "http.proxy": "http://localhost:10809",
+    "eslint.packageManager": "yarn",
+    "eslint.alwaysShowStatus": true,
+    "eslint.autoFixOnSave": true,
+    "eslint.lintTask.enable": true,
+    "latex-workshop.view.pdf.viewer": "tab",
+    "jupyter.sendSelectionToInteractiveWindow": false,
+    "python.languageServer": "None",
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    },
+    "[jupyter]": {
+    
+    },
+    "security.workspace.trust.untrustedFiles": "open",
 }
